# beat_grid

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: audio_prep.default.yaml  logging.yaml  schema_paths.yaml
docs/: manual_override_guide.md  output_contract.md  qc_checklist.md  workflow_01_audio_prep.md
qc/: schema_validate.py
schemas/: beat_grid_microtiming.schema.json  beat_grid_schema.json  continuity_package.json  shot_board_schema.json  triage_output.json
schemas/examples/: hypothetical_128bpm_example.json
scripts/: export_manual_override_template.py  inspect_beats.py  inspect_sections.py  run_audio_prep.py  validate_audio_prep.py
src/audio_prep/: __init__.py  cli.py  constants.py  logging_utils.py  models.py  pipeline.py  settings.py
src/audio_prep/analysis/: __init__.py  beats.py  confidence.py  downbeats.py  energy.py  key.py  micro_events.py  sections.py  stems.py  tempo.py
src/audio_prep/io/: __init__.py  audio_io.py  ffmpeg.py  ingest.py  paths.py
src/audio_prep/overrides/: __init__.py  manual_overrides.py  override_templates.py
src/audio_prep/qc/: __init__.py  continuity_checks.py  reports.py  schema_validate.py  stem_qc.py  validators.py
src/audio_prep/utils/: __init__.py  audio_features.py  math_utils.py  serialization.py  timefmt.py
tests/: test_continuity_checks.py  test_energy_curve.py  test_micro_events.py  test_models.py  test_schema_validate.py  test_timefmt.py
tests/fixtures/: sample_analysis.json  tiny_override.yaml
